fixed alignmentof our system mobile

--- a/frontend/static/frontend/base.css
+++ b/frontend/static/frontend/base.css
@@ -114,12 +114,16 @@ body {
       animation-timing-function: ease-in-out; }
       @media (max-width: 37.5em) {
         .main-head__content--subtitle {
-          letter-spacing: .5rem; } }
+          letter-spacing: .5rem;
+          font-size:2.5rem;} }
     .main-head__content--caption  {
         color: #ffffff;
         font-weight: 300;
         text-shadow: 2px 2px 10px #343a40;
-    }
+    } @media (max-width: 37.5em) {
+      .main-head__content--caption {
+        font-size:1.5rem;} }
+
     .video-btn {
       display: inline-block;
       font-weight: 400;
@@ -130,7 +134,7 @@ body {
       -moz-user-select: none;
       -ms-user-select: none;
       user-select: none;
-      width: 10vw;
+      padding: 1rem;
       height: 5vh;
       font-size:1.5rem;
       animation-delay: 2s;
